# 20240110_dsci524_toy_python_package

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  README.md  pycounts_toy  pycounts_toy_notebook.ipynb  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/pycounts_toy_python_524/: index.doctree
docs/_build/doctrees/autoapi/pycounts_toy_python_524/plotting/: index.doctree
docs/_build/doctrees/autoapi/pycounts_toy_python_524/pycounts_toy_python_524/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pycounts_toy_python_524/: plotting.html  pycounts_toy_python_524.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/pycounts_toy_python_524/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/pycounts_toy_python_524/: index.html
docs/_build/html/autoapi/pycounts_toy_python_524/plotting/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/pycounts_toy_python_524/: plotting.py  pycounts_toy_python_524.py
tests/: test_pycounts_toy_python_524.py
(+3 files in other folders)
