[tool.poetry]
name = "pycounts_toy_python_524"
version = "0.1.0"
description = "A package based on the pycounts tutorial, as part of DSCI 524 Individual Assignment"
authors = ["Gretel Tan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
